# ims

./: .gitignore  .~lock.avg_temps.ods#  README.md  ca.zip.txt  hluboka-orba-odkaz  uzemni-teploty_odkaz.txt  zima_teploty.ods  zima_teploty.xlsx
CA/: Makefile  args.txt  ca.cpp
docs_TeX/: Makefile  czplain.bst  dokumentace.aux  dokumentace.bib  dokumentace.tex  dokumentace.toc  remove_excess.sh
model_angl/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cell.cpp  cell.hpp  cmake_install.cmake  grid.cpp  grid.hpp  image.cpp  image.hpp  main.cpp  model_angl  simulator
model_diplom/: Makefile  args.h  ca.txt  main.cpp  out.txt  simulator
pavel_sim/: CA.cpp  CA.h  Cell.cpp  Cell.hpp  Image.cpp  Image.h  Makefile  README  main.cpp
pavel_sim/experiments/: D105_full  D105_iis_state  D105_template  E104_full  E104_full_with_alpha  E104_one_exit  E104_one_exit_with_alpha  E112_full  E112_full_with_alpha  E112_one_exit  E112_one_exit_with_alpha  article_exp1  article_exp2  article_exp3  article_exp4  article_exp5  manual
regulace/: regulace.xlsx
regulace_data/: regulace.xlsx
sklizen_data/: odkaz_sklizne.txt  sklizen_repka.xlsx
sklizen_data/data/: Postup_sklizne_4._9._2017_tabulka.doc  Zne_k_2._9._2019___cela_CR.doc  Zne_k_20._8._2018____cela_CR.doc  Zne_k_3._9._2013____cela_CR.doc  Zne_k_31._8._2015____cela_CR.doc  k_5._9._2016_CR.doc  sumarnet_1_9_1_08.xls  zne_210709.xls  zne_k_8._9.__2014.doc
teploty_data/: zima_teploty.xlsx
